[package]
name = "rust-test"
version = "0.1.0"
authors = ["foxriver76 <moritz.heusinger@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rust-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

experimental = ["esp-idf-svc/experimental"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = "0.4"
esp-idf-svc =  "=0.50.1"
toml-cfg    = "=0.1.3"
critical-section = "1.0"
embedded-svc = "0.28.1"
loadcell = "0.3.0"

[build-dependencies]
embuild = "0.33"
